--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -49,7 +50,8 @@
       ],
       "no-tabs": "off",
       "react/prop-types": "off",
-      "import/prefer-default-export": "off"
+      "import/prefer-default-export": "off",
+      "react/jsx-props-no-spreading": "off"
     }
   },
   "browserslist": {
